--- a/AcropolisMuseum/bin/AndroidManifest.xml
+++ b/AcropolisMuseum/bin/AndroidManifest.xml
@@ -7,6 +7,8 @@
     <uses-sdk
         android:minSdkVersion="19"
         android:targetSdkVersion="19" />
+    
+    <uses-permission android:name="android.permission.CAMERA"/>
 
     <application
         android:allowBackup="true"
@@ -14,8 +16,23 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
+               android:name="com.google.zxing.client.android.CaptureActivity"
+               android:screenOrientation="landscape"
+               android:configChanges="orientation|keyboardHidden"
+               android:theme="@android:style/Theme.NoTitleBar.Fullscreen"
+               android:windowSoftInputMode="stateAlwaysHidden">
+               <intent-filter>
+                  <action android:name="android.intent.action.MAIN"/>
+                  <category android:name="android.intent.category.DEFAULT"/>
+               </intent-filter>
+               <intent-filter>
+                  <action android:name="com.google.zxing.client.android.SCAN"/>
+                  <category android:name="android.intent.category.DEFAULT"/>
+               </intent-filter>
+        </activity>
+        <activity
             android:name=".Splash"
-            android:label="@string/app_name" 
+            android:label="@string/app_name"
             android:screenOrientation="portrait"
             android:theme="@android:style/Theme.Black.NoTitleBar" >
             <intent-filter>
@@ -27,9 +44,12 @@
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name" >
-            
         </activity>
-        
+        <activity
+            android:name=".UserModeling"
+            android:label="@string/title_activity_user_modeling" 
+            android:theme="@android:style/Theme.Black.NoTitleBar" >
+        </activity>
     </application>
 
 </manifest>
