--- a/AcropolisMuseum/bin/AndroidManifest.xml
+++ b/AcropolisMuseum/bin/AndroidManifest.xml
@@ -11,7 +11,7 @@
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.NFC" />
-    
+
     <uses-feature android:name="android.hardware.nfc" />
 
     <application
@@ -59,6 +59,10 @@
         <activity
             android:name=".NfcActivity"
             android:label="@string/title_activity_nfc" >
+        </activity>
+        <activity
+            android:name=".ArtifactInfo"
+            android:label="@string/title_activity_artifact_info" >
         </activity>
     </application>
 
